--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: go
 go:
-  - 1.8
+  - tip
 before_install:
-  - go get golang.org/x/tools/cmd/cover
   - go get github.com/mattn/goveralls
 script:
-  - go test --coverprofile=coverage.out --covermode=count ./...
-  - goveralls --coverprofile=coverage.out --service=travis-ci --repotoken 4N3d1WjHVkpQwoIP1CjpwHeee2XBzlweS
+  - goveralls --service=travis-ci --repotoken 4N3d1WjHVkpQwoIP1CjpwHeee2XBzlweS
